--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "classnames": "^2.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router": "^7.10.1",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.28.5",
